5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/226/users/4140/executions/1637_2442.log
== TEST (2019-04-09 10:08:51) 
-- CODE:
num=int(input());

if(num%2==0)
 print("par")
else 
 print("impar")
-- ERROR:
File "XXXX", line 3
    if(num%2==0)
               ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-09 10:09:21) 
-- CODE:
num=int(input());

if(num % 2==0)
 print("par")
else 
 print("impar")
-- ERROR:
File "XXXX", line 3
    if(num % 2==0)
                 ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-09 10:09:42) 
-- CODE:
num=int(input());

if((num%2)==0)
 print("par")
else 
 print("impar")
-- ERROR:
File "XXXX", line 3
    if((num%2)==0)
                 ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-09 10:09:57) 
-- CODE:
num=int(input());

if((num%2)==0)
 print("par")
else 
 print("impar")
-- ERROR:
File "XXXX", line 3
    if((num%2)==0)
                 ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-09 10:10:54) 
-- CODE:
num=int(input());

if((num%2)==0)
 print("par")
else 
 print("impar")
-- ERROR:
File "XXXX", line 3
    if((num%2)==0)
                 ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-09 10:11:00) 
-- CODE:
num=int(input());

if((num%2)==0)
 print("par")
else 
 print("impar")
-- EXECUTION TIME:
0.135599
-- ERROR:
  File "/home/codebench/codes/1637/2442/main.py", line 3
    if((num%2)==0)
                 ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-09 10:11:03) 
-- CODE:
num=int(input());

if((num%2)==0)
 print("par")
else 
 print("impar")
-- ERROR:
File "XXXX", line 3
    if((num%2)==0)
                 ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-09 10:11:51) 
-- CODE:

num = int(input("Digite um numero: "))

if (num % 2 == 0)
	mensagem = "Par"
else
	mensagem = "Impar"

print(mensagem)
-- ERROR:
File "XXXX", line 4
    if (num % 2 == 0)
                    ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-09 10:13:44) 
-- CODE:

num = int(input("Digite um numero: "))

if num % 2 == 0
	mensagem = "Par"
else
	mensagem = "Impar"

print(mensagem)
-- ERROR:
File "XXXX", line 4
    if num % 2 == 0
                  ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-09 10:14:07) 
-- CODE:

num = int(input("Digite um numero: "))

if num%2 == 0:
	mensagem = "Par"
else:
	mensagem = "Impar"

print(mensagem)
-- OUTPUT:
Impar
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-09 10:14:15) 
-- CODE:

num = int(input("Digite um numero: "))

if num%2 == 0:
	mensagem = "Par"
else:
	mensagem = "Impar"

print(mensagem)
-- EXECUTION TIME:
0.206873
-- TEST CASE 1:
---- input:
55
---- correct output:
impar
---- user output:
Impar
-- TEST CASE 3:
---- input:
842
---- correct output:
par
---- user output:
Par
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-09 10:14:26) 
-- CODE:

num = int(input("Digite um numero: "))

if num%2 == 0:
	mensagem = "par"
else:
	mensagem = "impar"

print(mensagem)
-- EXECUTION TIME:
0.152085
-- TEST CASE 1:
---- input:
55
---- correct output:
impar
---- user output:
impar
-- TEST CASE 3:
---- input:
842
---- correct output:
par
---- user output:
par
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
